--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -15,6 +15,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SolutionX"
         tools:targetApi="31">
+        <activity
+            android:name=".activities.FilterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.CurrencyActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.CountryActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
