--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,18 +11,14 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:name=".SolutionApplication"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SolutionX"
         tools:targetApi="31">
+
         <activity
-            android:name=".activities.FilterActivity"
-            android:exported="false" />
-        <activity
-            android:name=".activities.CurrencyActivity"
-            android:exported="false" />
-        <activity
-            android:name=".activities.CountryActivity"
+            android:name=".activities.ListActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
