--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:theme="@style/Theme.SolutionX"
         tools:targetApi="31">
         <activity
-            android:name=".activities.FragmentActivity"
+            android:name=".FragmentActivity"
             android:exported="false" />
         <activity
             android:name=".activities.ListActivity"
